--- a/HobbyHive/index.html
+++ b/HobbyHive/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full bg-gray-200">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/main-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>HobbyHive | Where Passions Thrive!</title>
   </head>
   <body class="h-full">
     <div id="root"></div>
